# VaaniSetu-

./: .gitignore  ALTERNATIVES_README.md  CONTRIBUTING.md  README.md  build_structure.js  build_structure.py  vaanisetu_complete.py
.github/workflows/: backend_tests.yml  firmware_build.yml
ai_training/compress/: huffman_encode.py  quantize_int8.py  structured_pruning.py
ai_training/data_prep/: augment_data.py  collect_samples.py  preprocess.py
ai_training/evaluate/: benchmark_latency.py  test_accuracy.py
ai_training/train/: knowledge_distill.py  train_base_model.py  train_lda.py
backend/: .env.example  Dockerfile  docker-compose.yml  requirements.txt  test_kb_build.py  test_myscheme.py  test_schema.py  test_scraper.py
backend/app/: database.py  main.py  schemas.py
backend/app/models/: device.py  scheme.py
docs/: api_reference.md  dialect_guide.md
firmware/: CMakeLists.txt
firmware/Core/Src/: main.c
firmware/Core/ai/: inference_engine.c  lda_adapter.c  model_loader.c
firmware/Core/audio/: fir_filter.c  mfcc_extended.c  syllable_detect.c  tonal_contour.c
firmware/Core/knowledge/: kb_decrypt.c  kb_lookup.c  kb_update.c
firmware/Core/system/: dma_audio.c  kws_model.c  power_mgmt.c
firmware/knowledge_base/: kb_builder.py
firmware/knowledge_base/schemes/: ayushman.json  mgnrega.json  pension.json  pm_awas.json  pm_kisan.json  ration_card.json
mobile_app/: pubspec.yaml
mobile_app/lib/: main.dart
voice/: tts_basic.py  tts_coqui.py  tts_xtts.py
web_dashboard/: package-lock.json  package.json
web_dashboard/src/: App.jsx  index.css
(+32 files in other folders)
